# placeholder_service

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  generator.py  pyproject.toml  requirements.txt
.github/workflows/: publish-docker.yml
placeholder/: __init__.py  formatter.py  generator.py
placeholder/tests/: test_formatters.py  test_generator.py  test_placeholder.py
tests/: test_app.py
