[project]
name = "placeholder-service"
version = "0.1.0"
description = "Микросервис для генерации изобраажений заглушек"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "markdown>=3.10",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
